<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Sensors</string>
    <string name="action_sensors_data">Sensors Data</string>
    <string name="action_settings">Settings</string>
    <string name="sensor_spinner_label">Select a sensor type:</string>
    <string name="label_x_axis">X-Axis</string>
    <string name="label_y_axis">Y-Axis</string>
    <string name="label_z_axis">Z-Axis</string>
    <string name="label_accuracy">Accuracy</string>
    <string name="btn_label_start">Start Sensor</string>
    <string name="btn_toggle_on_off">On/Off</string>
    <string name="lbl_sensor_desc">Description</string>
    <string name="title_activity_sensor_data">Sensors Data</string>
    <string name="title_activity_gpsmaps">GPS Maps</string>
    <string name="map_api_key">AIzaSyCk206IWIt33giHFyIASiHJLOpfNDZJ1jU</string>
    <string name="location_latitude">Latitude: </string>
    <string name="location_longitude">Longitude: </string>
    <string name="location_button">Where Am I</string>
    <string name="title_activity_start">Sensors App</string>
    <string name="hello_world">Hello world!</string>

</resources>
