<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <Button
        android:id="@+id/btnStart"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_label_start"
        />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        >

        <TextView
            android:id="@+id/lbl_x_axis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_x_axis"
            android:layout_weight="1"
            android:textStyle="bold"
            android:gravity="center_horizontal"
            />

        <TextView
            android:id="@+id/lbl_y_axis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_y_axis"
            android:layout_weight="1"
            android:textStyle="bold"
            android:gravity="center_horizontal"
            />

        <TextView
            android:id="@+id/lbl_z_axis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_z_axis"
            android:layout_weight="1"
            android:textStyle="bold"
            android:gravity="center_horizontal"
            />

    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        >

        <TextView
            android:id="@+id/txt_x_axis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            style="@style/border_style"
            android:maxWidth="5dp" />

        <TextView
            android:id="@+id/txt_y_axis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            style="@style/border_style"
            android:maxWidth="5dp"
            />
        <TextView
            android:id="@+id/txt_z_axis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            style="@style/border_style"
            android:maxWidth="5dp"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="7dp"
        android:paddingBottom="5dp"
        >

        <TextView
            android:id="@+id/lbl_accuracy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_accuracy"
            android:textStyle="bold"
            android:gravity="center_horizontal"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            />

        <TextView
            android:id="@+id/txt_accuracy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            style="@style/border_style"
            android:gravity="center_horizontal"
            android:maxWidth="5dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:layout_gravity="center_horizontal"
        android:id="@+id/lbl_toggle_btn"
        android:layout_marginTop="10dp"
        android:textColor="#ff2214ff"
        android:textStyle="bold"
        />

    <ToggleButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_toggle_on_off"
        android:id="@+id/toggleOnOff"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="7dp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="3dp"
        android:paddingRight="3dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:id="@+id/lbl_descrition"
            android:text="@string/lbl_sensor_desc"
            android:layout_marginTop="10dp"
            android:textColor="#ff2214ff"
            android:textStyle="bold"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:id="@+id/txt_sensor_description" />

    </LinearLayout>

</LinearLayout>